--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "6.0.9",
     "@angular/router": "6.0.9",
     "@ecodev/fab-speed-dial": "^1.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "bootstrap": "^4.1.1",
@@ -34,7 +34,7 @@
     "json-server": "^0.14.0",
     "ng-click-outside": "^4.0.0",
     "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1",
+    "rxjs-tslint": "^0.1.5",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
