--- a/package.json
+++ b/package.json
@@ -13,48 +13,48 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "6.0.9",
-    "@angular/cdk": "^6.3.3",
+    "@angular/cdk": "^6.4.2",
     "@angular/common": "6.0.9",
     "@angular/compiler": "6.0.9",
     "@angular/core": "6.0.9",
     "@angular/forms": "6.0.9",
     "@angular/http": "6.0.9",
-    "@angular/material": "^6.3.3",
+    "@angular/material": "^6.4.2",
     "@angular/platform-browser": "6.0.9",
     "@angular/platform-browser-dynamic": "6.0.9",
     "@angular/router": "6.0.9",
-    "@ecodev/fab-speed-dial": "^1.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@ecodev/fab-speed-dial": "^1.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.2",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
-    "bootstrap": "^4.1.1",
-    "core-js": "^2.4.1",
-    "fabric": "^2.3.2",
+    "bootstrap": "^4.1.3",
+    "core-js": "^2.5.7",
+    "fabric": "^2.3.3",
     "font-awesome": "^4.7.0",
     "json-server": "^0.14.0",
     "ng-click-outside": "^4.0.0",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.2.2",
     "rxjs-tslint": "^0.1.5",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "^6.0.8",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular/cli": "^6.1.2",
     "@angular/compiler-cli": "6.0.9",
     "@angular/language-service": "6.0.9",
-    "@types/fabric": "^1.5.36",
-    "@types/jasmine": "~2.8.3",
+    "@types/fabric": "^1.5.40",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
+    "@types/node": "^6.0.115",
+    "codelyzer": "^4.4.2",
+    "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma": "^2.0.5",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.3.2",
+    "protractor": "^5.4.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "2.7.2"
